Fix package.json name/version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "newrelic-graphql-react-example",
+  "version": "1.0.0",
   "private": true,
   "main": "src/index.tsx",
   "dependencies": {
