--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@types/graphql": "14.0.1",
     "@types/jest": "^22.1.3",
     "@types/node": "^9.4.6",
-    "@types/react": "^16.4.16",
-    "@types/react-dom": "16.0.4",
+    "@types/react": "^16.8.17",
+    "@types/react-dom": "^16.8.4",
     "apollo": "^1.9.2",
     "typescript": "^2"
   },
